<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/gradient">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loginFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:context="com.example.familymapclient.Fragments.LoginFragment"
        android:orientation="vertical">


        <GridLayout
            android:id="@+id/GridLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="8"
            tools:context="YAY"> <!--THIS IS NOT SET TO ANY PARTICULAR CONTEXT-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColorHighlight="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textColorLink="@color/textColor"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/server_host" />

            <EditText
                android:id="@+id/serverHostText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textColorLink="@color/textColor"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="105dp"
                android:ems="10"
                android:text="10.0.2.2"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/server_port" />

            <EditText
                android:id="@+id/serverPortNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="105dp"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:text="8080"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/userNameIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="105dp"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="105dp"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/firstNameIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="105dp"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/lastNameIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="105dp"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="105dp"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/genderOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"
                    android:text="@string/female" />
            </RadioGroup>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/login"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/register"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>