<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    tools:context=".Views.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/lifeLines"/>

        <Switch
            android:id="@+id/lifeLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:padding="10dp"
            android:layout_margin="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/treeLines"/>
        <Switch
            android:id="@+id/treeLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:padding="10dp"
            android:layout_margin="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/spouseLines"/>
        <Switch
            android:id="@+id/spouseLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:padding="10dp"
            android:layout_margin="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/fatherSide"/>
        <Switch
            android:id="@+id/fatherSideSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:padding="10dp"
            android:layout_margin="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/motherSide"/>
        <Switch
            android:id="@+id/motherSideSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:padding="10dp"
            android:layout_margin="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/maleEventFilter"/>
        <Switch
            android:id="@+id/maleEventSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:padding="10dp"
            android:layout_margin="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/femaleEventFilter"/>
        <Switch
            android:id="@+id/femaleEventSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:padding="10dp"
            android:layout_margin="5dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/logoutButton"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>
</LinearLayout>